Bug 127443 - Keyboard use of insert table tool bar control: Set table size 1x1 on first down or right arrow key press after insert table control window is shown
Summary: Keyboard use of insert table tool bar control: Set table size 1x1 on first do...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: TJ
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, difficultyMedium, easyHack, regression, skillCpp, topicDebug
Depends on:
Blocks:
 
Reported: 2019-09-08 21:46 UTC by Jim Raykowski
Modified: 2020-03-29 06:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-09-08 21:46:42 UTC
When insert table control is dropped down using the space or down arrow key, down arrow or right arrow key presses do not set the table size until both a down arrow and right arrow key are pressed.

To repro:

1) Open Writer
2) Keyboard navigate to the Insert Table control using F6 and tab/arrow keys
3) Press space or down arrow key when focus is on Insert Table control
Insert Table grid size control is dropped down
4) Press down arrow key or right arrow key

Result: nothing visible happens to the Insert Table control

Expected result: first cell of first row and column is highlighted
Comment 1 Dieter 2019-09-11 04:47:17 UTC
I confirm it with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 01837a85004a6f891a09c0a63ed7eff75d634827
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-09-01_00:07:05
Locale: en-GB (de_DE); UI-Language: en-US
Calc: threaded
Comment 2 Jim Raykowski 2019-09-11 22:18:42 UTC
Code pointers:
TableWindow::KeyInput 
TableWindow class is found in svx/source/tbxcrls/layctrl.cxx
Comment 3 Jim Raykowski 2019-09-12 21:15:26 UTC
TableWindow is also used in Multiple Pages Preview control in Writer print preview tool bar.
Comment 4 Jim Raykowski 2019-09-15 00:51:08 UTC
And in Draw/Impress Table control found in the Table toolbar.
Comment 5 Xisco Faulí 2019-09-17 14:58:23 UTC
since there is a code pointer, let's turn this into an easyhack...
Comment 6 Jim Raykowski 2019-09-24 01:53:21 UTC
For the oldest bibisect-43max checkout I noticed pressing the down or right arrow key after the insert table control is shown selects the first row/col as expected.

Version: 4.2.0.0.alpha1+
Build ID: fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3

I have added a regression tag.
Comment 7 Xisco Faulí 2019-12-11 16:05:54 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d57fad937caff40819afddeadfd8b36b8d27e418

author	Norbert Thiebaud <nthiebaud@gmail.com>	2014-01-27 00:40:47 -0600
committer	Norbert Thiebaud <nthiebaud@gmail.com>	2014-01-27 01:07:00 -0600
commit d57fad937caff40819afddeadfd8b36b8d27e418 (patch)
tree 8edd4bfc56a442801f4e6fd5c2ce18cbde512e15
parent 3d2fefd80082574a603895d47b73d740b7f31e7d (diff)
coverity#1103751 : Uninitialized scalar field

Bisected with: bibisect-43max
Comment 8 TJ 2020-03-07 18:31:44 UTC
I was able to reproduce the problem and will now attempt to fix it.
Comment 9 TJ 2020-03-09 21:41:46 UTC
Bug has been fixed and submitted to master. Build was successful and received a +1 status. Awaiting second opinion and merge.
Comment 10 Buovjaga 2020-03-09 21:48:21 UTC
(In reply to TJ from comment #9)
> Bug has been fixed and submitted to master. Build was successful and
> received a +1 status. Awaiting second opinion and merge.

For reference: https://gerrit.libreoffice.org/c/core/+/90192
Comment 11 Commit Notification 2020-03-16 23:25:36 UTC
TJ Holt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1fbeba66e823cea043fdd3f4c50d7b90585aaf30

tdf#127443 Table creation with keyboard

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Dieter 2020-03-29 06:30:23 UTC
Verified with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 1c9ced04189c9d23ffea05d5570960b54b05ef28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL

TJ Holt, thanks for fixing it!