tdf#127443 Table creation with keyboard

Change-Id: If0efe4c49e2da96677f24182afc39e640421b0a2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90192
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>